--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flávio Franco - Web Designer</title>
+  <title>Barbearia Barber Shop</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <a>Flávio Franco</a>
+    <a>
+      <img src="/images/barberShop" alt="Barber-Shop">
+    </a>
     <nav>
       <a href="">Home</a>
       <a href="">About</a>
@@ -20,8 +22,8 @@
   </header>
 
   <section class="hero">
-    <h1>Tenha a oportunidade de alavancar suas vendas</h1>
-    <h3>"Faça contato conosco e elabore um site profissional para sua empresa"</h3>
+    <h1>Barber Shop New Visual</h1>
+    <h3>Venha dar um up no seu visual e agende seu corte de cabelo</h3>
     <a href="" class="btn">Saiba mais</a>
   </section>
 
@@ -77,7 +79,7 @@
       <li><a href="https://www.facebook.com/flaviofffranco92/"><i class="fab fa-facebook"></i></a></li>
       <li><a href="https://twitter.com/flavioffranco92"><i class="fab fa-twitter"></i></a></li>
       <li><a href="https://www.instagram.com/flavio_franco20/?hl=pt"><i class="fab fa-instagram"></i></a></li>
-      <li><a href=""><i class="fab fa-pinterest"></i></a></li>
+      <li><a href=""><i class="fab fa-whatsapp"></i></a></li>
     </ul>
     <p>Todos os direitos reservados - Flávio Franco 2021</p>
   </footer>
